--- a/P2_test_py.ipynb
+++ b/P2_test_py.ipynb
@@ -247,123 +247,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "用sympy库进行了简单符号计算来验算，P4完成在前面的稿纸上。"
+    "构造taylor table解线性方程组，得到四个点相应的系数\n",
+    "<br>taylor展开参考:https://github.com/dongli/ipynb-files/blob/master/taylor_diff_formula.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp"
+    "from sympy import *\n",
+    "from pprint import pprint\n",
+    "h = symbols('Delta'); f = Function('f')\n",
+    "def taylor(f, x, n):\n",
+    "\tif x == 0:\n",
+    "\t\treturn [1 if i == 0 else 0 for i in range(n+1)]\n",
+    "\telse:\n",
+    "\t\treturn [list(x.as_coefficients_dict().values())[0] for x in f(x).series(x, x0=0, n=n+1).as_ordered_terms()][:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 1 & 1 & 1\\\\- \\Delta & 0 & \\Delta & 2 \\Delta\\\\\\frac{\\Delta^{2}}{2} & 0 & \\frac{\\Delta^{2}}{2} & 2 \\Delta^{2}\\\\- \\frac{\\Delta^{3}}{6} & 0 & \\frac{\\Delta^{3}}{6} & \\frac{4 \\Delta^{3}}{3}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[          1, 1,          1,            1],\n",
-       "[     -Delta, 0,      Delta,      2*Delta],\n",
-       "[ Delta**2/2, 0, Delta**2/2,   2*Delta**2],\n",
-       "[-Delta**3/6, 0, Delta**3/6, 4*Delta**3/3]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "construct matrix:\n",
+      "Matrix([\n",
+      "[   1, 1,   1,   1],\n",
+      "[  -1, 0,   1,   2],\n",
+      "[ 1/2, 0, 1/2,   2],\n",
+      "[-1/6, 0, 1/6, 4/3]])\n",
+      "result:\n",
+      "[1/3, 1/2, -1, 1/6]\n"
+     ]
     }
    ],
    "source": [
-    "h = sp.symbols('Delta')\n",
-    "A = sp.Matrix([[1,1,1,1],\\\n",
-    "               [-h,0,h,2*h],\\\n",
-    "               [1*h**2/2,0,1*h**2/2,2*h**2],\\\n",
-    "               [-1*h**3/6,0,1*h**3/6,4*h**3/3]]) \n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0\\\\-1\\\\0\\\\0\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ 0],\n",
-       "[-1],\n",
-       "[ 0],\n",
-       "[ 0]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b = sp.Matrix([0,-1,0,0])\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "求解线性方程组"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system = A,b\n",
-    "result = sp.linsolve(system, x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "result即是对应的a-1,a0,a1,a2的系数"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left\\{\\left( \\frac{1}{3 \\Delta}, \\  \\frac{1}{2 \\Delta}, \\  - \\frac{1}{\\Delta}, \\  \\frac{1}{6 \\Delta}\\right)\\right\\}$"
-      ],
-      "text/plain": [
-       "FiniteSet((1/(3*Delta), 1/(2*Delta), -1/Delta, 1/(6*Delta)))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result"
+    "# 1st order difference formula\n",
+    "print('construct matrix:')\n",
+    "M = Matrix([\n",
+    "\ttaylor(f, -1 * h, 3), # xj -  delta\n",
+    " \ttaylor(f,      0, 3), # xj \n",
+    "    taylor(f,  1 * h, 3), # xj +  delta\n",
+    "    taylor(f,  2 * h, 3)  # xj + 2delta\n",
+    "]).transpose()\n",
+    "pprint(M)\n",
+    "w = list(M.inv() * Matrix([0, -1, 0, 0]))\n",
+    "\n",
+    "print(\"result:\")\n",
+    "pprint(w)\n"
    ]
   },
   {
@@ -705,15 +644,15 @@
     "### 时间开销图的解释：\n",
     "<br>上图中的时间开销在格点较少的时候，两种方法(红色星号和绿色×号)的运行时间的区别并未太明显（因为自己编写的Thomas方法效率很低，有很多赋值的内存开销）\n",
     "<br>在log-log图上两种方法时间开销的斜率都呈线性增长，在格点数增加到10^3以上后，转置方法的计算开销增长（即斜率）高于Thomas方法10^2左右\n",
-    "<br>最上方的黄色圆点是不同格点数目下，转置和Thomas方法时间开销比例，在10^3格点时，转置已经高出Thomas近百倍，并且还在呈指数级增长"
+    "<br>最上方的黄色圆点是不同格点数目下，转置和Thomas方法时间开销比例，在10^3格点时，转置已经高出Thomas近百倍，并且还在呈指数级增长。"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('from_WSL': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitfromwslconda9f4e0731b71c446bb7f7ab9be96dd060"
   },
   "language_info": {
    "codemirror_mode": {
