--- a/dynamic/P1_track.ipynb
+++ b/dynamic/P1_track.ipynb
@@ -1,5 +1,60 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "简单算下方程的解，似乎这个ODE非常难处理\n",
+    "<br> dx/dt = a * cos(x) + b * sin(x) + cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sym\n",
+    "from sympy import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 1.0 \\int\\limits^{f{\\left(x \\right)}} \\frac{1}{1.0 a \\sin{\\left(y \\right)} + 0.00030210321 \\cos{\\left(y \\right)}}\\, dy = C_{1} - x$"
+      ],
+      "text/plain": [
+       "Eq(-1.0*Integral(1/(1.0*a*sin(_y) + 0.00030210321*cos(_y)), (_y, f(x))), C1 - x)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = sym.symbols('x')\n",
+    "y = sym.symbols('y')\n",
+    "a = sym.symbols('a')\n",
+    "b = sym.symbols('b')\n",
+    "f = sym.Function('f')(x)\n",
+    "f.diff(x)\n",
+    "# 积分迹线给出的方程是相对困难的\n",
+    "dsolve(f.diff(x)-a*sin(f)-0.00030210321*cos(f))"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.6 64-bit ('from_WSL')",
+   "language": "python",
+   "name": "python37664bitfromwsla20dd70eb6634bba8aa075bcfe796a34"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -10,59 +65,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python37664bitfromwsla20dd70eb6634bba8aa075bcfe796a34",
-   "display_name": "Python 3.7.6 64-bit ('from_WSL')"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "source": [
-    "简单算下方程的解，似乎这个ODE非常难处理\n",
-    "<br> dx/dt = a * cos(x) + b * sin(x) + cm"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import sympy as sym\n",
-    "from sympy import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "Eq(-812.141845446158*Integral(1/(1.0*sin(_y) + 0.245350658484608*cos(_y)), (_y, f(100))), C1 - 100)",
-      "text/latex": "$\\displaystyle - 812.141845446158 \\int\\limits^{f{\\left(100 \\right)}} \\frac{1}{1.0 \\sin{\\left(y \\right)} + 0.245350658484608 \\cos{\\left(y \\right)}}\\, dy = C_{1} - 100$"
-     },
-     "metadata": {},
-     "execution_count": 25
-    }
-   ],
-   "source": [
-    "x = sym.symbols('x')\n",
-    "y = sym.symbols('y')\n",
-    "a = sym.symbols('a')\n",
-    "b = sym.symbols('b')\n",
-    "f = sym.Function('f')(x)\n",
-    "f.diff(x)\n",
-    "dsolve(f.diff(x)-0.001231312*sin(f)-0.00030210321*cos(f)))"
-   ]
-  }
- ]
+ "nbformat_minor": 4
 }
