--- a/numerical_PDE/P_set1/P5.ipynb
+++ b/numerical_PDE/P_set1/P5.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "# GRID POINTS\n",
-    "N = 4"
+    "N = 5"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +83,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "[row_a,row_b,row_c,row_d,ff,matrix_check,d_check] = init_p5(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 1., -2., -2., -2.,  1.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "row_b"
    ]
   },
   {
@@ -219,7 +239,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "11.9 ms ± 3.33 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.79 ms ± 11.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -247,7 +267,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.11 ms ± 13.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.14 ms ± 12.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -275,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
